# mae

./: .dockerignore  .editorconfig  .gitignore  .project  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  Makefile  README.md  ROADMAP.md  SECURITY.md  TESTING.md  cliff.toml  deny.toml  docker-compose.collab-test.yml  docker-compose.headless-e2e.yml  docker-compose.test-network.yml  docker-compose.yml  tmp_theme_test.txt
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: agent_loop.rs  guardrail.rs  main.rs  mcp_client.rs  residency_check.rs
crates/ai/: Cargo.toml  build.rs
crates/ai/src/: claude.rs  connectivity.rs  context_limits.rs  executor.rs  gemini.rs  guardrail.rs  guidance.rs  lib.rs  ollama.rs  openai.rs  pricing.rs  provider.rs  session.rs  token_estimate.rs  tools.rs  types.rs
crates/core/: Cargo.toml
crates/core/benches/: buffer_ops.rs
crates/core/src/: agenda_view.rs  ai_residency.rs  buffer.rs  buffer_mode.rs  buffer_view.rs  clipboard.rs  command_palette.rs  commands.rs  conversation.rs  cursor.rs  dap_intent.rs  debug.rs  debug_view.rs  diff.rs  display_policy.rs  display_region.rs  driven_window.rs  editor.rs  event_record.rs  file_browser.rs  file_lock.rs  file_picker.rs  file_tree.rs  foldable_view.rs  git_status.rs  graph_view.rs  graph_view_support.rs  grapheme.rs  heading.rs  help_view.rs  hooks.rs  image_meta.rs  input.rs  kb_seed.rs  kb_sharing.rs  kb_sharing_tests.rs  kb_view.rs  keymap.rs  keymap_registry.rs  lib.rs  (+21 more)
crates/core/tests/: kb_sync_n_peer_e2e.rs
crates/dap/: Cargo.toml
crates/dap/src/: client.rs  lib.rs  manager.rs  protocol.rs  transport.rs
crates/gui/: Cargo.toml
crates/gui/src/: RENDERING.md  buffer_render.rs  canvas.rs  conversation_render.rs  cursor.rs  debug_render.rs  file_tree_render.rs  gutter.rs  input.rs  layout.rs  lib.rs  messages_render.rs  popup_render.rs  scrollbar.rs  shell_render.rs  splash_render.rs  status_render.rs  text.rs  theme.rs
crates/kb/: Cargo.toml
crates/kb/src/: activity.rs  backup.rs  cache.rs  cozo_store.rs  data_dir.rs  export.rs  federation.rs  fuzzy.rs  lib.rs  migrate.rs  org.rs  persist.rs  query.rs  store.rs  watch.rs
crates/kb/tests/: cozo_scale_test.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs  lib.rs  manager.rs  protocol.rs  transport.rs
crates/mae/: Cargo.toml
crates/mae/src/: agents.rs  ai_event_handler.rs  ai_residency.rs  bootstrap.rs  cli.rs  collab_bridge.rs  collab_bridge_tests.rs  config.rs  daemon_supervisor.rs  dap_bridge.rs  doctor.rs  graph_layout_bridge.rs  gui_app.rs  gui_event.rs  headless_loop.rs  key_handling.rs  lsp_bridge.rs  main.rs  manual_kb.rs  mdns_discovery.rs  practices_kb.rs  scheme_dap_bridge.rs  scheme_lsp_bridge.rs  self_test_prompt.md  shell_keys.rs  shell_lifecycle.rs  sync_broadcast.rs  system_prompt.md  terminal_loop.rs  test_runner.rs  upgrade.rs  watchdog.rs
crates/mae/tests/: check_config_theme_failure.rs  collab_bridge_integration.rs  collab_stress.rs  collab_tcp_e2e.rs  collab_tcp_e2e_kb_protocol.rs  collab_tcp_e2e_kb_stress.rs  collab_tcp_e2e_psk_auth.rs  collab_tcp_e2e_tests.rs  ensure_guidance_config_e2e.rs  headless_e2e.rs  headless_idle_cpu_e2e.rs  headless_kb_convergence_e2e.rs  headless_soak_shaped_e2e.rs  kb_graph_validation.rs  kb_graph_validation_embeddings.rs  kb_graph_validation_queries.rs  kb_graph_validation_schema.rs  kb_lifecycle_e2e.rs  kb_search_grading.rs  kb_search_perf.rs  kb_seed_provenance_e2e.rs  mcp_event_loop_integration.rs  mcp_tool_tiering_e2e.rs  tool_schema_nested_e2e.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: broadcast.rs  client.rs  lib.rs  protocol.rs  session.rs  shim.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: buffer_render.rs  conversation_render.rs  cursor.rs  debug_render.rs  file_tree_render.rs  graph_view_render.rs  help_render.rs  lib.rs  messages_render.rs  popup_render.rs  shell_render.rs  splash_render.rs  status_render.rs  theme_convert.rs  which_key_render.rs
crates/scheme/: Cargo.toml  SPEC_STANCES.md
crates/scheme/src/: compiler.rs  env.rs  ffi.rs  introspect.rs  lib.rs  library.rs  lisp_error.rs  lsp.rs  macros.rs  reader.rs  runtime.rs  runtime_tests.rs  value.rs  vm.rs
crates/scheme/tests/: r7rs_compliance.rs  scheme_benchmarks.rs  scheme_io_ports.rs  scheme_programs.rs  scheme_torture.rs
crates/state-server/: Cargo.toml
crates/state-server/completions/: mae-state-server.bash  mae-state-server.fish  mae-state-server.zsh
crates/state-server/src/: auth.rs  cli.rs  config.rs  doc_store.rs  handler.rs  lib.rs  main.rs  storage.rs
crates/state-server/tests/: collab_e2e.rs  network_e2e.rs
crates/sync/: Cargo.toml
crates/sync/benches/: crdt_ops.rs
crates/sync/src/: awareness.rs  encoding.rs  kb.rs  lib.rs  text.rs
daemon/: Cargo.toml  build.rs
daemon/benches/: kb_dispatch_concurrency.rs
daemon/src/: checkpoint.rs  collab_handler.rs  collab_handler_tests.rs  config.rs  conn_limit.rs  dialer.rs  doc_store.rs  handler.rs  hygiene.rs  kb_query.rs  lazy_fetch_client.rs  lib.rs  main.rs  oauth.rs  p2p.rs  projector.rs  scheduler.rs  storage.rs  ticket.rs
daemon/src/collab_handler/: docs_methods.rs  kb_content.rs  kb_governance.rs  kb_membership.rs  mod.rs  sync_methods.rs
daemon/src/tests/: kb_query_tests.rs  kb_socket_concurrency_tests.rs  kb_socket_connection_limit_tests.rs  kb_write_concurrency_tests.rs  mod.rs
daemon/tests/: collab_e2e.rs  collab_stress.rs  network_e2e.rs  oauth_e2e.rs
shared/kb/: Cargo.toml
shared/kb/examples/: dogfood_metrics.rs
shared/kb/src/: activity.rs  cache.rs  cozo_store.rs  federation.rs  fuzzy.rs  graph_query.rs  hygiene.rs  lib.rs  lru_query.rs  migrate.rs  org.rs  query.rs  store.rs  watch.rs
shared/mcp/: Cargo.toml
shared/mcp/src/: auth.rs  broadcast.rs  client_mgr.rs  collection_store.rs  content_key_store.rs  daemon_client.rs  file_lock.rs  identity.rs  keystore.rs  lib.rs  protocol.rs  session.rs  shim.rs  tls.rs
shared/sync/: Cargo.toml
shared/sync/benches/: crdt_ops.rs
test_fixtures/: Cargo.toml  dap_test.py  lsp_test.rs
(+979 files in other folders)
