[workspace]
members = [
    "crates/core",
    "crates/renderer",
    "crates/gui",
    "crates/scheme",
    "crates/lsp",
    "crates/dap",
    "crates/ai",
    "crates/kb",
    "crates/mae",
    "crates/shell",
    "crates/mcp",
    "test_fixtures",
]
exclude = ["tools/code-map"]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "GPL-3.0-or-later"

[workspace.dependencies]
tracing = "0.1"
rusqlite = { version = "0.39", features = ["bundled"] }
