[workspace]
members = [
    "crates/babel",
    "crates/export",
    "crates/core",
    "crates/renderer",
    "crates/gui",
    "crates/scheme",
    "crates/lsp",
    "crates/dap",
    "crates/ai",
    "crates/kb",
    "crates/mae",
    "crates/shell",
    "crates/mcp",
    "crates/snippets",
    "crates/format",
    "crates/make",
    "crates/lookup",
    "crates/spell",
    "crates/sync",
    "crates/canvas",
    "crates/state-server",
]
exclude = ["tools/code-map"]
resolver = "2"

[workspace.package]
version = "0.11.1"
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.95"

[workspace.dependencies]
tracing = "0.1"
rusqlite = { version = "0.39", features = ["bundled"] }
