[workspace]
members = [
    "crates/babel",
    "crates/export",
    "crates/core",
    "crates/renderer",
    "crates/gui",
    "crates/scheme",
    "crates/lsp",
    "crates/dap",
    "crates/ai",
    "crates/mae",
    "crates/shell",
    "crates/snippets",
    "crates/format",
    "crates/make",
    "crates/lookup",
    "crates/spell",
    "crates/canvas",
    "shared/kb",
    "shared/sync",
    "shared/mcp",
]
exclude = ["tools/code-map", "daemon"]
resolver = "2"

[workspace.package]
version = "0.13.2"
edition = "2021"
license = "GPL-3.0-or-later"
rust-version = "1.95"

[workspace.dependencies]
tracing = "0.1"
