[package]
name = "mae-daemon"
version = "0.14.30"
edition = "2021"
license = "GPL-3.0-or-later"
description = "MAE daemon — background KB persistence, maintenance, collaboration, and services"

[lib]
name = "mae_daemon"
path = "src/lib.rs"

[[bin]]
name = "mae-daemon"
path = "src/main.rs"

[dependencies]
mae-kb = { path = "../shared/kb", default-features = false, features = ["crdt"] }
mae-mcp = { path = "../shared/mcp" }
mae-sync = { path = "../shared/sync" }

# CozoDB with SQLite storage — separate workspace avoids rusqlite links conflict
cozo = { version = "0.7", default-features = false, features = ["storage-sqlite", "rayon"] }

# Collab WAL persistence — uses `sqlite` crate (same native lib as cozo, no links conflict)
sqlite = "0.32"
async-trait = "0.1"

tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
toml = "1.1"
sha2 = "0.11"
hex = "0.4"
iroh = "1.0.0"
data-encoding = "2"

[dev-dependencies]
hex = "0.4"
tempfile = "3"
