[package]
name = "mae-daemon"
version = "0.14.50"
edition = "2021"
license = "GPL-3.0-or-later"
description = "MAE daemon — background KB persistence, maintenance, collaboration, and services"

[lib]
name = "mae_daemon"
path = "src/lib.rs"

[[bin]]
name = "mae-daemon"
path = "src/main.rs"

[dependencies]
# storage-sqlite is required explicitly here (not left to Cargo's feature
# unification with a separate direct `cozo` dep) -- the daemon never calls
# `cozo::` directly, it only uses mae-kb's CozoKbStore, so mae-kb's own
# feature list must be the thing that actually requests the sqlite backend.
mae-kb = { path = "../shared/kb", default-features = false, features = ["crdt", "storage-sqlite"] }
mae-mcp = { path = "../shared/mcp" }
mae-sync = { path = "../shared/sync" }

# Collab WAL persistence — uses `sqlite` crate (same native lib as cozo, no links conflict)
sqlite = "0.32"
async-trait = "0.1"

tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
toml = "1.1"
sha2 = "0.11"
hex = "0.4"
iroh = "1.0.0"
data-encoding = "2"

[dev-dependencies]
hex = "0.4"
tempfile = "3"
