[package]
name = "mae-daemon"
version = "0.14.54"
edition = "2021"
license = "GPL-3.0-or-later"
description = "MAE daemon — background KB persistence, maintenance, collaboration, and services"

[lib]
name = "mae_daemon"
path = "src/lib.rs"

[[bin]]
name = "mae-daemon"
path = "src/main.rs"

[dependencies]
# storage-sqlite is required explicitly here (not left to Cargo's feature
# unification with a separate direct `cozo` dep) -- the daemon never calls
# `cozo::` directly, it only uses mae-kb's CozoKbStore, so mae-kb's own
# feature list must be the thing that actually requests the sqlite backend.
mae-kb = { path = "../shared/kb", default-features = false, features = ["crdt", "storage-sqlite"] }
mae-mcp = { path = "../shared/mcp" }
mae-sync = { path = "../shared/sync" }

# Collab WAL persistence — uses `sqlite` crate (same native lib as cozo, no links conflict)
sqlite = "0.32"
async-trait = "0.1"

tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
toml = "1.1"
sha2 = "0.11"
hex = "0.4"
iroh = "1.0.0"
data-encoding = "2"

# ADR-052: OAuth 2.1 resource-server bearer-token validation. Hand-rolled
# scaffolding (PRM endpoint, audience checks, principal mapping) around this
# crate's JWT decode/signature-verification primitive -- a deliberate,
# evaluated choice over the third-party `rmcp-server-kit` wrapper (see the
# ADR's "Alternatives rejected"). `jsonwebtoken` itself is the widely-used,
# well-established Keats crate, not a new/unproven dependency.
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "rust_crypto"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging"] }
tokio-rustls = "0.26"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
http-body-util = "0.1"
rustls-pemfile = "2"
bytes = "1"

[dev-dependencies]
hex = "0.4"
tempfile = "3"
# oauth.rs adversarial tests sign real JWTs with freshly-generated RSA
# keypairs per test (CLAUDE.md principle #14 -- real inputs, not a shared
# hardcoded test key) rather than relying on a live external IdP.
# rsa 0.9 depends on rand_core 0.6 -- rand must stay on the matching 0.8
# line or RsaPrivateKey::new's CryptoRngCore bound fails to resolve.
rsa = "0.9"
rand = "0.8"
base64 = "0.22"
# ADR-054: the capacity benchmark spawns the real compiled mae-daemon binary
# (bench targets, like `daemon/tests/*.rs`, only see the library crate's
# public re-exports -- handler/accept_loop/DaemonState are bin-crate-private
# by design, see `daemon/src/tests/mod.rs`) and drives it over its real KB
# Unix socket -- same convention as `daemon/tests/network_e2e.rs`.
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "kb_dispatch_concurrency"
harness = false
