[package]
name = "mae-test-fixtures"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

# This crate exists solely so rust-analyzer indexes the LSP test fixture.
# It has no runtime dependencies and is excluded from CI.

[lib]
name = "mae_test_fixtures"
path = "lsp_test.rs"
