[package]
name = "mae-ai"
description = "AI agent integration layer (tool-calling, transport)"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
mae-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["sync", "process"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tracing = { workspace = true }
glob = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "test-util"] }
