[package]
name = "mae-ai"
description = "AI agent integration layer (tool-calling, transport)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mae-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["sync", "process"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tracing = { workspace = true }
glob = "0.3"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "test-util"] }
