[package]
name = "mae-core"
description = "Buffer management, event loop, and core primitives"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
mae-kb = { path = "../kb" }
ropey = "1"
unicode-width = "0.2"
unicode-segmentation = "1.12"
regex = "1"
tracing = { workspace = true }
toml = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-md = "0.3"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-scheme = "0.24"
tree-sitter-yaml = "0.7"
sysinfo = "0.33"

[dev-dependencies]
tempfile = "3"
