[package]
name = "mae-core"
description = "Buffer management, event loop, and core primitives"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mae-babel = { path = "../babel" }
mae-export = { path = "../export" }
mae-format = { path = "../format" }
mae-kb = { path = "../../shared/kb", features = ["storage-sled", "crdt"] }
mae-lookup = { path = "../lookup" }
mae-make = { path = "../make" }
mae-snippets = { path = "../snippets" }
mae-spell = { path = "../spell" }
mae-sync = { path = "../../shared/sync" }
ropey = "1"
unicode-width = "0.2"
unicode-segmentation = "1.12"
regex = "1"
tracing = { workspace = true }
toml = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-md = "0.5"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-scheme = "0.24"
tree-sitter-yaml = "0.7"
hostname = "0.4"
sha2 = "0.11"
sysinfo = "0.39"
libc = "0.2"
imagesize = "0.14"
kamadak-exif = "0.6"
hex = "0.4"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "buffer_ops"
harness = false
