[package]
name = "mae-dap"
description = "DAP client with first-class AI integration"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "sync"] }
tracing = { workspace = true }
mae-core = { path = "../core" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "test-util", "io-util"] }
