[package]
name = "mae-gui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "GUI rendering backend for MAE (winit + skia-safe)"

[dependencies]
mae-core = { path = "../core" }
mae-renderer = { path = "../renderer" }
mae-shell = { path = "../shell" }
winit = "0.30"
skia-safe = "0.82"
tracing = { workspace = true }
