[package]
name = "mae-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GUI rendering backend for MAE (winit + skia-safe)"

[dependencies]
mae-core = { path = "../core" }
mae-renderer = { path = "../renderer" }
mae-shell = { path = "../shell" }
winit = "0.30"
skia-safe = { version = "0.93", features = ["svg"] }
softbuffer = "0.4"
tracing = { workspace = true }
unicode-width = "0.2"
