[package]
name = "mae-kb"
description = "Knowledge base layer (graph store, links)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
rusqlite = { workspace = true }
tracing = { workspace = true }
walkdir = "2"
notify = "8"

[dev-dependencies]
tempfile = "3"
