[package]
name = "mae-kb"
description = "Knowledge base layer (graph store, links)"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
cozo = ["dep:cozo"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
rusqlite = { workspace = true }
tracing = { workspace = true }
walkdir = "2"
notify = "8"
mae-sync = { path = "../sync" }
cozo = { version = "0.7", optional = true, default-features = false, features = ["storage-sled", "rayon"] }

[dev-dependencies]
tempfile = "3"
