[package]
name = "mae-kb"
description = "Knowledge base layer (graph store, links)"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
tracing = { workspace = true }
walkdir = "2"
notify = "8"
mae-sync = { path = "../sync" }
cozo = { version = "0.7", default-features = false, features = ["storage-sled", "rayon"] }
sha2 = "0.10"
ndarray = "0.15"

[dev-dependencies]
tempfile = "3"
