[package]
name = "mae-lsp"
description = "LSP client with first-class AI integration"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "sync", "process", "time", "rt"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "test-util", "io-util"] }
