[package]
name = "mae-lsp"
description = "LSP client with first-class AI integration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "sync", "process", "time", "rt"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "test-util", "io-util"] }
