[package]
name = "mae"
description = "Modern AI Editor - terminal binary"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "mae"
path = "src/main.rs"

[dependencies]
mae-core = { path = "../core" }
mae-renderer = { path = "../renderer" }
mae-scheme = { path = "../scheme" }
mae-ai = { path = "../ai" }
mae-lsp = { path = "../lsp" }
mae-dap = { path = "../dap" }
mae-shell = { path = "../shell" }
mae-mcp = { path = "../mcp" }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
futures = "0.3"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

[dev-dependencies]
tempfile = "3.27.0"
