[package]
name = "mae"
description = "Modern AI Editor - terminal binary"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mae"
path = "src/main.rs"

[dependencies]
mae-core = { path = "../core" }
mae-renderer = { path = "../renderer" }
mae-scheme = { path = "../scheme" }
mae-ai = { path = "../ai" }
mae-lsp = { path = "../lsp" }
mae-dap = { path = "../dap" }
mae-shell = { path = "../shell" }
mae-mcp = { path = "../mcp" }
mae-gui = { path = "../gui", optional = true }
winit = { version = "0.30", optional = true }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
futures = "0.3"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
dirs = "6.0.0"

[features]
gui = ["dep:mae-gui", "dep:winit"]

[dev-dependencies]
tempfile = "3.27.0"
