[package]
name = "mae-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) bridge for MAE"

[dependencies]
tokio = { version = "1", features = ["rt", "net", "io-util", "io-std", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { workspace = true }

[[bin]]
name = "mae-mcp-shim"
path = "src/shim.rs"
