[package]
name = "mae-renderer"
description = "Display and rendering layer (terminal + GPU)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mae-core = { path = "../core" }
mae-shell = { path = "../shell" }
ratatui = "0.29"
crossterm = "0.28"
tracing = { workspace = true }
