[package]
name = "mae-scheme"
description = "Embedded Scheme (R7RS-small) runtime for extensions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mae-core = { path = "../core" }
mae-kb = { path = "../kb" }
mae-sync = { path = "../sync" }
base64 = "0.22"
tracing = { workspace = true }
libc = "0.2"
