[package]
name = "mae-scheme"
description = "Embedded Scheme (R7RS-small) runtime for extensions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mae-core = { path = "../core" }
mae-kb = { path = "../../shared/kb", features = ["storage-sled", "crdt"] }
mae-sync = { path = "../../shared/sync" }
base64 = "0.22"
tracing = { workspace = true }
libc = "0.2"
parking_lot = "0.12"
