[package]
name = "mae-state-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MAE collaborative state server — CRDT sync over TCP"

[dependencies]
mae-mcp = { path = "../mcp" }
mae-sync = { path = "../sync" }
tokio = { version = "1", features = ["full", "signal"] }
rusqlite = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
async-trait = "0.1"
sha2 = "0.11"
hmac = "0.13"
rand = "0.9"

[lib]
name = "mae_state_server"
path = "src/lib.rs"

[[bin]]
name = "mae-state-server"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
sha2 = "0.11"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
