[package]
name = "mae-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
yrs = "0.22"
ropey = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
similar = "2"
tracing.workspace = true

[dev-dependencies]
rand = "0.8"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crdt_ops"
harness = false
