[package]
name = "mae-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
yrs = { version = "0.27", features = ["sync"] }
ropey = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
similar = "3"
tracing.workspace = true
sha2 = "0.11"

[dev-dependencies]
rand = "0.9"
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "crdt_ops"
harness = false
