[package]
name = "mae-kb"
description = "Knowledge base layer (graph store, links)"
version = "0.14.52"
edition = "2021"
license = "GPL-3.0-or-later"

[features]
default = ["storage-sled"]
storage-sled = ["cozo/storage-sled"]
# SQLite (WAL) backend — lets N processes share one on-disk store safely (multiple
# readers + serialized writer). Compiled ALONGSIDE sled so the one-time sled→sqlite
# migration can read the old store. Editor pulls no rusqlite, so cozo's sqlite3
# native lib has no `links` conflict.
storage-sqlite = ["cozo/storage-sqlite"]
crdt = ["dep:mae-sync"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
tracing = "0.1"
walkdir = "2"
notify = "8"
lru = "0.18"
mae-sync = { path = "../sync", optional = true }
mae-mcp = { path = "../mcp" }
cozo = { version = "0.7", default-features = false, features = ["rayon"] }
sha2 = "0.11"
ndarray = "0.15"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
mae-sync = { path = "../sync" }
