[package]
name = "mae-mcp"
version = "0.13.10"
edition = "2021"
license = "GPL-3.0-or-later"
description = "MCP (Model Context Protocol) bridge for MAE"

[dependencies]
tokio = { version = "1", features = ["rt", "net", "io-util", "io-std", "sync", "macros", "process", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
tracing = "0.1"
hmac = "0.12"
sha2 = "0.10"
rand = "0.9"
async-trait = "0.1"

[[bin]]
name = "mae-mcp-shim"
path = "src/shim.rs"
