[package]
name = "mae-mcp"
version = "0.14.16"
edition = "2021"
license = "GPL-3.0-or-later"
description = "MCP (Model Context Protocol) bridge for MAE"

[dependencies]
tokio = { version = "1", features = ["rt", "net", "io-util", "io-std", "sync", "macros", "process", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
tracing = "0.1"
hmac = "0.13"
sha2 = "0.11"
rand = "0.10"
async-trait = "0.1"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
base64 = "0.22"
hex = "0.4"
# TLS transport (collab `key` mode). Use the ring backend uniformly + an explicit
# CryptoProvider so we never clash with reqwest's aws-lc-rs default in the editor.
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
x509-parser = "0.16"
# Optional reuse of an existing OpenSSH Ed25519 key as the collab identity.
ssh-key = { version = "0.6", default-features = false, features = ["ed25519", "alloc", "std"] }

[[bin]]
name = "mae-mcp-shim"
path = "src/shim.rs"
