[package]
name = "mae-sync"
version = "0.14.5"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
yrs = { version = "0.27", features = ["sync"] }
ropey = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
similar = "3"
tracing = "0.1"
sha2 = "0.11"
hex = "0.4"
ed25519-dalek = "2" # ADR-026: signed, hash-chained membership ops
rand = "0.10" # #72: unpredictable authorization-epoch tokens (fresh_epoch_token)

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "crdt_ops"
harness = false
