[package]
name = "mae-sync"
version = "0.14.14"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
yrs = { version = "0.27", features = ["sync"] }
ropey = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
similar = "3"
tracing = "0.1"
sha2 = "0.11"
hex = "0.4"
ed25519-dalek = "2" # ADR-026: signed, hash-chained membership ops
rand = "0.10" # #72: unpredictable authorization-epoch tokens (fresh_epoch_token)
# ADR-037 E2E content encryption (#131). dalek/RustCrypto siblings of ed25519-dalek 2
# — they share curve25519-dalek 4, so no duplicate curve arithmetic. The wrap key is
# derived from the X25519 ECDH secret with sha2 (already vendored) — no `hkdf` crate,
# which would pull a second `digest` major and break the #98 crypto coherence.
chacha20poly1305 = "0.10" # XChaCha20-Poly1305 AEAD (content + key-wrap)
x25519-dalek = { version = "2", features = ["static_secrets"] } # ECDH for key wrap
curve25519-dalek = "4" # Ed25519->X25519 public conversion (Edwards->Montgomery)

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "crdt_ops"
harness = false
