[package]
name = "mae-sync"
version = "0.14.43"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
yrs = { version = "0.27", features = ["sync"] }
ropey = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
similar = "3"
tracing = "0.1"
sha2 = "0.11"
hex = "0.4"
ed25519-dalek = "3" # ADR-036: signed, hash-chained membership ops
rand = "0.10" # #72: unpredictable authorization-epoch tokens (fresh_epoch_token)
# ADR-037 E2E content encryption (#131). dalek/RustCrypto siblings of ed25519-dalek 2
# — they share curve25519-dalek 4, so no duplicate curve arithmetic. The wrap key is
# derived from the X25519 ECDH secret with sha2 (already vendored) — no `hkdf` crate,
# which would pull a second `digest` major and break the #98 crypto coherence.
chacha20poly1305 = "0.11" # XChaCha20-Poly1305 AEAD (content + key-wrap)
# x25519-dalek/curve25519-dalek pinned at 2/4 (not the dependabot-proposed 3/5),
# same reason as ed25519-dalek in shared/mcp/Cargo.toml: iroh's dependency chain
# (iroh-base) hard-pins curve25519-dalek = "=5.0.0-rc.0", which conflicts with a
# plain `^5` requirement here once daemon/Cargo.toml unifies both (daemon depends
# on both iroh and this crate). Revisit once iroh depends on the stable 5.x/3.x.
x25519-dalek = { version = "3", features = ["static_secrets"] } # ECDH for key wrap
curve25519-dalek = "5" # Ed25519->X25519 public conversion (Edwards->Montgomery)
# #156 F9: zeroize key material on drop (ContentKey + DH/scalar intermediates). Same
# version the dalek siblings already pull, so no new transitive cost.
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "crdt_ops"
harness = false
